edit mobile alignment issues, ready for review cont.

--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
 
 // variables
 $font_color:rgb(0, 0, 0);
@@ -34,6 +35,17 @@ $debug_border_color: rgba(255, 0, 0, 0);
     width: $width;
 }
 
+@mixin default_font (
+    $font_size:30px,
+    $font_color: black,
+    $font_weight:normal,
+){
+    font-size: $font_size;
+    color: $font_color;
+    font-weight: $font_weight;
+    font-family: 'Cormorant Garamond', serif;
+}
+
 
 html {
     display: flex;
@@ -45,6 +57,7 @@ body {
     height: 100%;
     // padding-left: 2.5vw;
     // padding-right: 2.5vw;
+    @include default_font();    
 }
 
 header {
@@ -145,7 +158,7 @@ header {
             min-width: 300px;
             width: 20vw;
             height: auto;
-            
+
             img {
                 width: 100%;
                 height: auto;
@@ -158,10 +171,10 @@ header {
             @include debug($bg_color:$debug_color_3);
             min-width: 300px;
             width: 20vw;
-            height: 60vh;
+            min-height: 60vh;
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr;
+            grid-template-rows: 30vh auto;
 
             img {
                 grid-row: 1;
@@ -232,18 +245,32 @@ header {
 
 }
 footer {
-    @include debug();
-    height: 15vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    img {
-        width: 200px;
-        height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+
+    .icons {
+        grid-row: 1;
+        @include debug();
+        height: 15vh;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        img {
+            width: 200px;
+            height: auto;
+        }
     }
 
+    p {
+        grid-row: 2;;
+        display: flex;
+        justify-self: center;
+        align-self: end;
+        text-align: center;
+    }
 }
 
 //---note --------
